fix: fix the display of the search and filters box on small screens.

--- a/src/pages/perfumes/perfumes-grid-header/perfumes-grid-header.scss
+++ b/src/pages/perfumes/perfumes-grid-header/perfumes-grid-header.scss
@@ -42,7 +42,7 @@
     flex-direction: row;
   }
 
-  .search-filter-wrapper {
+  .search-filters-wrapper {
     min-width: 0;
   }
 }
